# Scripta_public

./: CMakeLists.txt  conandata.yml  conanfile.py
.github/workflows/: conan-package.yml
